# ollama

./: .env  .gitignore  api.py  app.py  college_data.py  config.py  ingest_data.py  pyproject.toml  requirements.txt
faiss_index/: index.faiss  index.pkl
src/Rag_concept/: rag_based_chatbot.py
src/Utility/: load_model.py
